// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: BundleBase
message BundleBase
{	
	
	
	repeated BundleDefine Bundle = 1; // Bundle

}

// Defined in table: Bundle
message BundleDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional string BundleId = 2; 
	
	
	optional int32 Pay = 3; 
	
	
	optional string Owenr = 4; 
	
	
	optional string Url = 5; 
	
	
	optional int32 Ios = 6; 
	
	
	optional int32 Android = 7; 

}

